Fix styling issues with Modal. Close button now more visible on hover. Modal now grays out and makes unclickable all screen when ScheduleSidebar Component open

--- a/src/components/Modal/styles.scss
+++ b/src/components/Modal/styles.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  width: 100%;
+  width: 200%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 10000;
   
@@ -39,7 +39,8 @@
       }
 
       .custom-modal-close-button:hover {
-        stroke: black;
+        fill: gray;
+        stroke: gray;
         stroke-width: 20px;
       }
     }
